# Log_parser

./: .env.example  .gitignore  Makefile  README.md  base.yaml  docker-compose.yaml  eval.yaml  main.py  pyproject.toml
DeepParse/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml
DeepParse/configs/: eval_16_datasets.yaml
DeepParse/deepparse/: api.py  cli.py  dataset_loader.py  logging_utils.py  tokenize.py
DeepParse/deepparse/drain/: drain_engine.py  masks_application.py
DeepParse/deepparse/evaluation/: eval_runner.py
DeepParse/deepparse/metrics/: grouping_accuracy.py
DeepParse/deepparse/synth/: hf_deepseek_r1.py  llm_adapter.py  r1_deepseek_stub.py
DeepParse/deepparse/tools/: build_training_set.py  fetch_loghub.py
DeepParse/deepparse/training/: __init__.py  finetune.py
DeepParse/deepparse/utils/: regex_library.py  sampling.py
DeepParse/examples/: 01_quickstart.py  02_demo_pipeline.sh  03_loghub_offline_eval.sh  04_finetune_and_eval.sh  05_use_trained_adapter.py  README.md
DeepParse/notebooks/: deepparse_finetune_colab.ipynb
DeepParse/scripts/: fetch_datasets.sh  synth_all_with_adapter.sh
DeepParse/tests/: test_drain_masks.py  test_eval_runner.py  test_loghub_integration.py  test_metrics_ga_pa.py  test_misc_modules.py  test_property_drain.py  test_property_sampling.py  test_public_api.py  test_regex_classes.py  test_sampling.py  test_synth_stub_determinism.py  test_training_data_builder.py
backend/: connect.py  main.py
ingestion/: format_detector.py  grouping.py  log.txt
llm/: registry.py
llm/models/: gemini.py  groq.py  llm_base.py
logs/: extractor.py
parser/: parser.py  template_cache.py
utils/: geminiparser.py  groqparser.py  llm.py  logger.py  setting.py  token_bucket.py
